# taskana-benchmark-suite

./: .gitignore  LICENSE  README.md
.github/workflows/: benchmark.yaml
core/: Dockerfile  build.gradle
core/src/main/kotlin/: Main.kt
core/src/main/kotlin/fmt/: Format.kt
core/src/main/kotlin/lib/: Benchmark.kt  Constraints.kt  Runner.kt
core/src/main/kotlin/structs/: Group.kt  Result.kt
core/src/main/kotlin/tasks/: Loops.kt  Maps.kt
rest/: Cargo.toml  Dockerfile  index.js  package-lock.json  package.json
rest/benchmarks/: local.yaml  simple.yaml  taskana.yaml
rest/config/: Constants.js
rest/lib/: Benchmark.js  HTTPClient.js  Result.js
rest/native/: main.rs
rest/tests/: main.js
rest/util/: Format.js  HighPrecisionTime.js
scripts/: install_rust_wasm.sh
terraform/: main.tf  variables.tf
