[package]
name = "taskana-lasttests"
version = "0.1.0"
description = "Benchmarking suite for the REST layer of the TASKANA task management library."
license = "MIT"
edition = "2018"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]
path = "native/main.rs"

[dependencies]
once_cell = "1"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
neon-serde3 = "0.10.0"
async-std = "1.12.0"

[dependencies.neon]
version = "0.10.1"
default-features = false
features = ["channel-api", "napi-6", "promise-api"]
